Update home page
- Add background image
- Add sidebar V1

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
     <link rel="stylesheet" href="./assets/css/index.css">
 </head>
 <body>
+    <div id="sidebar-menu">
+        <ul>
+            <li>Acceuil</li>
+            <li>À propos</li>
+            <li>Hobbies</li>
+        </ul>
+    </div>
     <div id="centered-container">
         <h1>GAY Killian</h1>
         <p>Developpeur web.</p>
