Add the about part
- Add the about part
- Add the sidebar navigation system

--- a/index.html
+++ b/index.html
@@ -12,14 +12,21 @@
 <body>
     <div id="sidebar-menu">
         <ul>
-            <li>Acceuil</li>
-            <li>À propos</li>
-            <li>Hobbies</li>
+            <li class="sidebar-li active"><a href="#home-screen">Acceuil</a></li>
+            <li class="sidebar-li"><a href="#about-screen">À propos</a></li>
+            <li class="sidebar-li"><a href="#">Hobbies</a></li>
         </ul>
     </div>
-    <div id="centered-container">
+    <div id="home-screen" class="screen">
+        <div id="centered-container">
+            <h1>GAY Killian</h1>
+            <p>Developpeur web.</p>
+        </div>
+    </div>
+    <div id="about-screen" class="screen">
         <h1>GAY Killian</h1>
         <p>Developpeur web.</p>
     </div>
 </body>
 </html>
+<script src="assets/js/index.js"></script>
