--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     Passionné de technologie depuis mon plus jeune âge. 
                     J'adore apprendre de nouvelles choses et je suis motivé pour relever de nouveaux challenges et développer mes compétences. 
                     Je m'épanouie particulièrement dans le développement front-end.
-                    Je suis très à l'aise en ce qui concerne le travail d'équipe, et j'ai une réel envie de contribuer.
+                    Je suis très à l'aise en ce qui concerne le travail d'équipe, et j'ai une réelle envie de contribuer.
                 </p>
             </div>
             <div>
